[gd_scene load_steps=7 format=3 uid="uid://crfapfitdhv0x"]

[ext_resource type="Texture2D" uid="uid://dn1ely4x28j4u" path="res://Assets/UI/MiniPanel01.jpg" id="1_3sapy"]
[ext_resource type="FontFile" uid="uid://j5854hdtucyt" path="res://Assets/Font/Montserrat-VariableFont_wght.ttf" id="2_1te87"]
[ext_resource type="Script" path="res://Scenes/TestScenes/testINVENTORY/crewmatepanel.gd" id="2_c7vdn"]
[ext_resource type="PackedScene" uid="uid://bc68yf6rjisyq" path="res://Scenes/TestScenes/testINVENTORY/slottest.tscn" id="4_yprlm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pr4qs"]
texture = ExtResource("1_3sapy")

[sub_resource type="LabelSettings" id="LabelSettings_bw1yk"]
font = ExtResource("2_1te87")
font_size = 38

[node name="PanelContainer" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxTexture_pr4qs")
script = ExtResource("2_c7vdn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="CrewmateName" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Test"
label_settings = SubResource("LabelSettings_bw1yk")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CrewmateIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3

[node name="ItemContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemSlot1" parent="MarginContainer/VBoxContainer/HBoxContainer/ItemContainer" instance=ExtResource("4_yprlm")]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemSlot2" parent="MarginContainer/VBoxContainer/HBoxContainer/ItemContainer" instance=ExtResource("4_yprlm")]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemSlot3" parent="MarginContainer/VBoxContainer/HBoxContainer/ItemContainer" instance=ExtResource("4_yprlm")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="new_item" from="MarginContainer/VBoxContainer/HBoxContainer/ItemContainer/ItemSlot1" to="." method="_on_item_slot_1_new_item"]
[connection signal="new_item" from="MarginContainer/VBoxContainer/HBoxContainer/ItemContainer/ItemSlot2" to="." method="_on_item_slot_2_new_item"]
[connection signal="new_item" from="MarginContainer/VBoxContainer/HBoxContainer/ItemContainer/ItemSlot3" to="." method="_on_item_slot_3_new_item"]
